# srcwalk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  install.sh
.github/workflows/: ci.yml  release.yml
.greptile/: config.json
.pi/tasks/: tasks-76151221-0e43-4114-b50a-5d4f5d141e54.json
benchmark/: README.md  analyze.py  analyze_exploration.py  compare_versions.py  config.py  run.py
npm/: README.md  install.js  install.test.js  package.json  run.js
scripts/: release.sh
skills/: SKILL.md
skills/srcwalk/: GUIDE.md  SKILL.md
skills/tilth/: SKILL.md
src/: artifact.rs  budget.rs  cache.rs  classify.rs  cli.rs  cli_run.rs  edit.rs  error.rs  format.rs  install.rs  lib.rs  main.rs  main_version_tests.rs  map.rs  mcp.rs  output.rs  overview.rs  session.rs  threading.rs  types.rs  version.rs
src/capabilities/: mod.rs
src/commands/: call_format.rs  callees.rs  callers.rs  compare.rs  context.rs  decision_flow.rs  deps.rs  diff.rs  find.rs  flow.rs  impact.rs  mod.rs  multi_scope.rs  path.rs  review.rs  section_disambiguation.rs
src/diff/: mod.rs
src/evidence/: anchor.rs  atom.rs  confidence.rs  direct_call.rs  local_links.rs  mod.rs  next_action.rs
src/evidence/direct_call/: tests.rs
src/index/: bloom.rs  symbol.rs
src/lang/: css.rs  decision_flow.rs  mod.rs  outline.rs  scoped_occurrences.rs  treesitter.rs
src/read/: directory.rs  full.rs  imports.rs  mod.rs  section.rs  suggest.rs  tests.rs
src/search/: access.rs  artifact_snippet.rs  blast.rs  callees.rs  callers.rs  content.rs  deps.rs  facets.rs  filter.rs  glob.rs  io.rs  mod.rs  pagination.rs  rank.rs  siblings.rs  symbol.rs  tests.rs  truncate.rs
tests/: access_grouping.rs  artifact_mode.rs  bfs_snapshots.rs  callees_detailed.rs  compare_command.rs  csharp_definitions.rs  css_support.rs  decision_flow.rs  diff_command.rs  document_support.rs  files_and_symbol_glob.rs  flow_filter.rs  footer_tips.rs  honest_symbol_occurrences.rs  ignore_policy.rs  impact_output.rs  intent_first_cli.rs  map_output.rs  multi_scope.rs  p12_section_disambig.rs  path_display.rs  path_exact.rs  path_line.rs  review_command.rs  scoped_occurrences.rs  semantic_compact.rs  stylesheet_support.rs  subcommand_aliases.rs  windows_paths.rs
(+33 files in other folders)
